Added a new feature

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>test</title>
     </head>
     <body>
-        Hello, world!
+        Hello, world! 
+        Here is a new feature!
     </body>
 </html>
