--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>test</title>
     </head>
     <body>
-        Hello, world! 
-        Here is a new feature!
+        Here is the new branch contents.
     </body>
 </html>
